<resources>
    <string name="app_name">"Licenta"</string>
    <string name="hello">Hello</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="dropped_pin">Pin</string>
    <string name="continue_to_app">Continue</string>
    <string name="request_message">Welcome to the app! In order to use the application in the way it is intended to work, we need to request location permission for you. If you agree and wish to continue, tap on the button below.</string>
    <string name="permission_required">Permission Required</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save_marker">Save Marker</string>
    <string name="add_marker">Add Marker</string>
    <string name="take_a_photo">Take a Photo</string>
    <string name="select_from_files">Select A Photo From Files</string>
    <string name="google_map_api_key">AIzaSyAhDM2v1KS_rdypxLGmw_QC4X69ubc7Rlk</string>
    <string name="get_directions">Get directions!</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="distance">Distance</string>
    <string name="dist">0.00 km</string>
    <string name="time">Time</string>
    <string name="starting_time">00:00:00</string>
    <string name="time_result">%1$s km</string>
    <string name="show_tracked_paths">Show Tracked Paths</string>
    <string name="show_heatmap">Show Heatmap</string>
    <string name="show_personal_markers">Show Personal Markers</string>
    <string name="clear_map">Clear Map</string>
    <string name="show_close_markers">Show Close markers</string>

</resources>